--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-constants": "^18.0.12",
+    "expo-font": "^14.0.10",
     "expo-image-picker": "^17.0.10",
     "expo-linking": "^8.0.11",
     "expo-notifications": "^0.32.15",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.2"
   },
   "private": true
 }
