--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,4 @@
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -7,12 +8,25 @@ env/
 venv/
 ENV/
 .venv
-*.egg-info/
-dist/
-build/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+.hypothesis/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Environment
 .env
+.env.local
 
-
-
-
-
+# Database
+*.db
+*.sqlite
+*.sqlite3
