feat: Sistema de alarmes melhorado, ficha de anamnese e histÃ³rico do paciente
- Implementado sistema de alarmes para medicamentos com som e voz feminina
- Adicionada informaÃ§Ã£o de jejum nos alarmes e interface
- Criada Ficha de Anamnese com tipo sanguÃ­neo, alergias, cirurgias e condiÃ§Ãµes mÃ©dicas
- Implementado HistÃ³rico do paciente com consultas feitas e agendadas
- Adicionados alarmes para consultas agendadas (dia anterior e horÃ¡rio configurÃ¡vel)
- Melhorias na interface de medicamentos com submenus colapsÃ¡veis
- Adicionada seleÃ§Ã£o de dias da semana para agendamento de medicamentos
- Melhorias na interface de consultas com campo de hora e lembretes configurÃ¡veis
- Corrigida versÃ£o do @react-native-community/datetimepicker para compatibilidade com Expo SDK 54

--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "userInterfaceStyle": "light",
     "scheme": "saudenold",
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "@react-native-community/datetimepicker"
     ],
     "splash": {
       "image": "./assets/splash-icon.png",
@@ -33,7 +34,9 @@
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
-        "RECEIVE_BOOT_COMPLETED"
+        "RECEIVE_BOOT_COMPLETED",
+        "RECORD_AUDIO",
+        "MODIFY_AUDIO_SETTINGS"
       ]
     },
     "web": {
@@ -41,10 +44,11 @@
     },
     "extra": {
       "eas": {
-        "projectId": ""
+        "projectId": "652a1313-f0f8-4a45-b835-94cbb1f72ae6"
       },
       "apiUrl": "http://localhost:8000",
-      "apiKey": ""
+      "apiKey": "",
+      "router": {}
     }
   }
 }
