--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.5.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-av": "~16.0.8",
     "expo-constants": "^18.0.12",
+    "expo-device": "~8.0.10",
     "expo-font": "^14.0.10",
     "expo-image-picker": "^17.0.10",
     "expo-linking": "^8.0.11",
     "expo-notifications": "^0.32.15",
     "expo-router": "^6.0.21",
+    "expo-speech": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
