fix: corrigir alarmes e notificaÃ§Ãµes para funcionar em background
- Adicionar logs detalhados para debug de notificaÃ§Ãµes
- Corrigir sound: true para sound: 'default' em consultas e vacinas
- Adicionar funÃ§Ãµes para reagendar todos os alarmes ao iniciar app
- Adicionar scheduleAllVisitAlarms e scheduleAllVaccineAlarms
- Melhorar handler de notificaÃ§Ãµes para todos os tipos de alarme
- Adicionar permissÃµes Android necessÃ¡rias no app.json
- Configurar canal de notificaÃ§Ã£o com MAX importance
- Adicionar botÃµes de debug na tela de medicamentos
- Adicionar funÃ§Ã£o testNotification para testes
- Adicionar documentaÃ§Ã£o sobre notificaÃ§Ãµes em background
- Corrigir problema com notificaÃ§Ãµes recorrentes que sÃ³ tocam no prÃ³ximo dia

--- a/app.json
+++ b/app.json
@@ -12,8 +12,23 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#FF6B6B",
+          "mode": "production"
+        }
+      ]
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "remote-notification"
+        ]
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +36,24 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.atosramos.SaudeNold"
+      "package": "com.atosramos.SaudeNold",
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "RECEIVE_BOOT_COMPLETED",
+        "VIBRATE",
+        "WAKE_LOCK",
+        "SCHEDULE_EXACT_ALARM",
+        "USE_EXACT_ALARM"
+      ]
+    },
+    "notification": {
+      "icon": "./assets/icon.png",
+      "color": "#FF6B6B",
+      "iosDisplayInForeground": true,
+      "androidMode": "default",
+      "androidCollapsedTitle": "Alarmes de Saúde"
     },
     "web": {
       "favicon": "./assets/favicon.png"
