Atualizar frontend para usar endpoints de licenÃ§as PRO e configurar backend
- Atualizar proLicense.js para usar serviÃ§o api.js
- Adicionar device_id na validaÃ§Ã£o de licenÃ§as
- Atualizar googlePay.js para usar api.js
- Adicionar licensesAPI ao services/api.js
- Criar script de teste test_licenses.py
- Adicionar LICENSE_SECRET_KEY ao Kubernetes secret e deployment
- Criar documentaÃ§Ã£o LICENSES-SETUP.md
- Criar .env.example com todas as variÃ¡veis necessÃ¡rias

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -55,6 +55,11 @@ spec:
             secretKeyRef:
               name: backend-secret
               key: API_KEY
+        - name: LICENSE_SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: backend-secret
+              key: LICENSE_SECRET_KEY
         resources:
           requests:
             memory: "128Mi"
