--- a/k8s/backend-secret.yaml
+++ b/k8s/backend-secret.yaml
@@ -7,6 +7,7 @@ type: Opaque
 stringData:
   API_KEY: ""  # Será gerado automaticamente ou definido manualmente
   DATABASE_PASSWORD: saudenold123  # Deve ser alterado em produção
+  LICENSE_SECRET_KEY: ""  # Chave secreta para geração de licenças PRO (gerar com: python -c "import secrets; print(secrets.token_urlsafe(64))")
 
 
 
