--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-iap": "^14.7.1",
     "react-native-pdf": "^6.7.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
