--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     container_name: saudenold-backend
     environment:
       DATABASE_URL: postgresql://saudenold:saudenold123@postgres:5432/saudenold
-      CORS_ORIGINS: http://localhost:8082,exp://*
+      CORS_ORIGINS: http://localhost:8081,http://localhost:8082,exp://*
     ports:
       - "8000:8000"
     depends_on:
