--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "SaudeNold",
     "slug": "SaudeNold",
     "version": "1.0.0",
+    "scheme": "saudenold",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -27,7 +28,10 @@
       "infoPlist": {
         "UIBackgroundModes": [
           "remote-notification"
-        ]
+        ],
+        "NSLocationWhenInUseUsageDescription": "Usamos sua localizacao aproximada para proteger sua conta.",
+        "NSFaceIDUsageDescription": "Permita o uso de biometria para entrar mais rapido.",
+        "NSMicrophoneUsageDescription": "Permita o uso do microfone para ditado."
       }
     },
     "android": {
@@ -37,10 +41,24 @@
       },
       "edgeToEdgeEnabled": true,
       "package": "com.atosramos.SaudeNold",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "category": ["BROWSABLE", "DEFAULT"],
+          "data": [
+            { "scheme": "saudenold", "host": "auth", "pathPrefix": "/verify" },
+            { "scheme": "saudenold", "host": "auth", "pathPrefix": "/reset" }
+          ]
+        }
+      ],
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "USE_BIOMETRIC",
+        "RECORD_AUDIO",
         "RECEIVE_BOOT_COMPLETED",
         "VIBRATE",
         "WAKE_LOCK",
@@ -57,6 +75,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "apiUrl": "http://192.168.0.101:8000",
+      "apiKey": ""
     }
   }
 }
